tp6_resources/0_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: training-${USER}
  labels:
    team: training
    author: ${USER}
