tp6_resources/2_service-cp.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-${USER}-svc-cp
spec:
  selector:
    app: training-${USER}
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
